--- a/lib/views/partials/header.html
+++ b/lib/views/partials/header.html
@@ -136,7 +136,7 @@
                             <!-- Dropdown -->
                             <ul class="dropdown-menu lg-dropdown">
                                
-                                <li class="menu-icon"><a href="javascript:void(0);" ng-click="mmnCTRL.logout()"><span class="gcon gcon-log-out rs-dropdown-icon"></span>Log Out</a></li>
+                                <li class="menu-icon"><a href="/logout"><span class="gcon gcon-log-out rs-dropdown-icon"></span>Log Out</a></li>
                             </ul>
                             <!-- End dropdown -->
                         </li>
