--- a/lib/views/partials/sidebar.html
+++ b/lib/views/partials/sidebar.html
@@ -11,7 +11,7 @@
                     <span class="fa fa-home rs-icon-menu"></span>General data
                 </a>
             </li><li class="ng-scope">
-                <a href="userlist">
+                <a href="/userlist">
                     <span class="fa fa-user-circle-o rs-icon-menu"></span>User
                 </a>
             </li><!-- end ngIf: $authentication.data.user.username != 'antunes' -->
