--- a/lib/views/footer.html
+++ b/lib/views/footer.html
@@ -13,29 +13,29 @@
 <!-- Screen overlay is required -->
 <div id="rs-screen-overlay"></div>
 
-<script src="https://jac-admin.mircloud.us/assets/js/moment.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/moment-timezone-with-data-2012-2022.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/moment.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/moment-timezone-with-data-2012-2022.js"></script>
 <script src="https://jac-admin.mircloud.us/assets/js/humanize-duration.js"></script>
 
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/modernizr.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/jquery.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/bootstrap.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/raphael.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.22.2/sweetalert2.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/nicescroll/jquery.nicescroll.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/ismobile/isMobile.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/vendor/modernizr.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/bootstrap.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/raphael.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/summernote-lite.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/sweetalert2.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.nicescroll.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/isMobile.min.js"></script>
 
-<script src="https://jac-admin.mircloud.us/assets/plugins/prettify/prettify.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/datepicker/js/bootstrap-datepicker.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/prettify.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/bootstrap-datepicker.min.js"></script>
 
-<script src="https://jac-admin.mircloud.us/assets/plugins/stepy/jquery.stepy.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/jquery.backstretch.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/chart-js/Chart.bundle.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.stepy.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.backstretch.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/chart-js/Chart.bundle.min.js"></script>
 
-<script src="assets/js/layout-default.js"></script><!--<script type="text/javascript" src="app/auth/auth.js"></script>-->
+<!-- <script src="assets/js/layout-default.js"> --></script><!--<script type="text/javascript" src="app/auth/auth.js"></script>-->
 
 
 
 <!-- Template Js -->
-<script src="https://jac-admin.mircloud.us/assets/js/apps.js"></script></body></html>
+<!-- <script src="https://jac-admin.mircloud.us/assets/js/apps.js"></script></body></html> -->
