--- a/lib/views/login.html
+++ b/lib/views/login.html
@@ -16,21 +16,21 @@
     <!-- Framework -->
         <!--  <link rel="stylesheet" href="static/public/style/bootstrap.min.css"> -->
 
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/bootstrap.min.css">
     <!-- Icon Fonts -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/plugins/stepy/jquery.stepy.min.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/jquery.stepy.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.22.2/sweetalert2.min.css">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.css" rel="stylesheet">
 
 
     <!-- Main Template CSS -->
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/css/bootstrap.custom.css">
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/css/style.css">
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/css/helper.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/bootstrap.custom.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/style.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/helper.css">
 
-    <link rel="stylesheet" href="https://jac-admin.mircloud.us/assets/css/your-style.css">
+    <link rel="stylesheet" href="http://13.59.165.203/MizeNetwork-Admin/static/public/styles/your-style.css">
 <style></style></head>
 
 
@@ -83,7 +83,7 @@
 
             <div class="form-group has-feedback feedback-left">
                 <label class="control-label">Username</label>
-                <input class="form-control ng-untouched ng-dirty ng-valid-parse ng-valid ng-valid-required" placeholder="Username" id="username" name="username" ng-model="loginCTRL.user.username" required="" type="text">
+                <input class="form-control ng-untouched ng-dirty ng-valid-parse ng-valid ng-valid-required" placeholder="Username/Email" id="username" name="email" required="" type="text">
                 <span class="gcon gcon-user f-s-xs form-control-feedback" aria-hidden="true"></span>
             </div><!-- /.form-group -->
             <label ng-show="loginCTRL.campoValido('username','required')" class="error hide" for="username">This field must be filled.</label>
@@ -137,23 +137,23 @@
     <!-- END FOOTER -->
 
 
-<div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 100%; width: 100%; z-index: -999998; position: absolute;"><div class="backstretch-item" style="position: absolute; margin: 0px; padding: 0px; border: medium none; width: 100%; height: 100%; z-index: -999999;"><img style="position: absolute; margin: 0px; padding: 0px; border: medium none; width: 1366px; height: 853.75px; max-width: none; left: 0px; top: -248.375px; right: auto; bottom: auto;" alt="" src="https://jac-admin.mircloud.us/assets/img/bg.jpg"></div></div></div><!-- /#rs-wrapper -->
+<div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 100%; width: 100%; z-index: -999998; position: absolute;"><div class="backstretch-item" style="position: absolute; margin: 0px; padding: 0px; border: medium none; width: 100%; height: 100%; z-index: -999999;"><img style="position: absolute; margin: 0px; padding: 0px; border: medium none; width: 1366px; height: 853.75px; max-width: none; left: 0px; top: -248.375px; right: auto; bottom: auto;" alt="" src="http://13.59.165.203/MizeNetwork-Admin/static/image/bg.jpg"></div></div></div><!-- /#rs-wrapper -->
 
 <!-- Screen overlay is required -->
 <div id="rs-screen-overlay"></div>
 
 
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/jquery.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/bootstrap.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/raphael.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/bootstrap.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/raphael.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.22.2/sweetalert2.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/nicescroll/jquery.nicescroll.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/plugins/ismobile/isMobile.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.nicescroll.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/isMobile.min.js"></script>
 
-<script src="https://jac-admin.mircloud.us/assets/plugins/prettify/prettify.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/prettify.min.js"></script>
 
-<script src="https://jac-admin.mircloud.us/assets/plugins/stepy/jquery.stepy.min.js"></script>
-<script src="https://jac-admin.mircloud.us/assets/js/vendor/jquery.backstretch.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.stepy.min.js"></script>
+<script src="http://13.59.165.203/MizeNetwork-Admin/static/public/scripts/jquery.backstretch.min.js"></script>
 
 <div class="back-to-top bg-dark b-r-a"><span class="glyphicon glyphicon-chevron-up"></span></div></body></html>
