--- a/lib/views/user_form.html
+++ b/lib/views/user_form.html
@@ -121,7 +121,7 @@
                         </div><!-- /.row -->
                         <div class="form-group">
                             <label class="control-label" for="email">Email Address</label>
-                            <input  required="" class="form-control ng-pristine ng-untouched ng-valid ng-valid-email" id="email" name="email" value="{{{data.emailID}}}" type="email">
+                            <input  required="" class="form-control ng-pristine ng-untouched ng-valid ng-valid-email" id="email" name="email" value="{{{data.email}}}" type="email">
                             <label ng-show="campoValido('email','required','personal_data')" class="error hide" for="email">This field must be filled.</label>
                             <label ng-show="campoValido('email','email','personal_data')" class="error hide" for="email">E-mail is invalid.</label>
                         </div><!-- /.form-group -->
