--- a/lib/views/user_list.html
+++ b/lib/views/user_list.html
@@ -161,21 +161,16 @@
                             <tr >
                                 
                                 <td>{{this.username}}</td>
-                                <td>{{this.emailID}}</td>
+                                <td>{{this.email}}</td>
                                 <td>{{this.first_name}} {{this.last_name}}</td>
                                 <td>{{this.kit_name}}</td>
                                 <td>{{this.ewallet}}</td>
                                 
-                                    {{#if this._id.$oid}}
-                                       <td> <a class="btn btn-primary" href="/user/bonus/{{this._id.$oid}}"> Bonus</a> </td><td>
-                                        <a class="btn btn-warning" href="/user/edit/{{this._id.$oid}}">Edit</a> <a class="btn btn-warning" href="/user/order/{{this._id.$oid}}">Orders</a>
+                                
+                                       <td> <a class="btn btn-primary" href="/user/bonus/{{this.id}}"> Bonus</a> </td><td>
+                                        <a class="btn btn-warning" href="/user/edit/{{this.id}}">Edit</a> <a class="btn btn-warning" href="/user/order/{{this.id}}">Orders</a>
                                         </td> 
-                                    {{else}}
-                                        <td><a class="btn btn-primary" href="/user/bonus/{{this._id}}"> Bonus</a>
-                                        </td><td>
-                                        <a class="btn btn-warning" href="/user/edit/{{this._id}}">Edit</a> <a class="btn btn-warning" href="/user/order/{{this._id}}">Orders</a>
-                                        </td>
-                                    {{/if}}
+                                    
                                      
                                 
                             </tr>
