--- a/lib/views/course.html
+++ b/lib/views/course.html
@@ -28,7 +28,7 @@
 <div class="rs-dashhead m-b-lg ng-scope">
     <div class="rs-dashhead-content">
         <div class="rs-dashhead-titles">
-            <h3 class="rs-dashhead-title m-t">User Bonus</h3>
+            <h3 class="rs-dashhead-title m-t">Course List</h3>
             <!-- Begin Toolbar toggle button on mobile -->
             <div class="rs-dashhead-toolbar" style="margin-top: -20px;">
 
@@ -44,11 +44,14 @@
     </div><!-- /.rs-dashhead-content -->
           <!-- Begin Breadcrumb -->
     <ol class="breadcrumb breadcrumb-arrow">
-        <li class="active">User Bonus List</li>
+<!--         <li class="active">Course List</li>
+ -->        <li><a class="btn btn-primary" style="color: #fff;" href="/add_course"><i class="fa fa-plus"></i> Add Course</a></li>
     </ol>
+     
           <!-- End Breadcrumb -->
 </div><!-- /.rs-dashhead -->
 <!-- End Dashhead -->
+<div class="col-md-12"></div>
 {{{err}}}
 <div class="container-fluid ng-scope">
     <div class="row">
@@ -59,14 +62,12 @@
                         <table class="table table-striped" style="width:100%; " >
                             <thead>
                             <tr>
-                                <th>Bonus Binario</th>
-                                <th>Bonus indicacao direta</th>
-                                <th>Bonus indicacao indireta</th>
-                                <th>Bonus matching</th>
-                                <th>Bonus booster</th>
-                                <th>Bonus montly</th>
-                                <th>Bonus super pool</th>
-                                <th>Date</th>
+                                <th>Sr.No</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>Create Date</th>
+                                <th>Action</th>
+                                
                             </tr>
                             </thead>
 
@@ -74,30 +75,21 @@
                              {{#each data }}  
                              
                                 <tr class="ng-scope">
-                                <td class="ng-binding">{{this.bonus_binario}}</td>
-                                <td class="ng-binding">{{this.bonus_indicacao_direta}}</td>
+                                <td class="ng-binding">{{math @index '+' 1}}</td>
+                                <td class="ng-binding">{{this.title}}</td>
 
                                 <td class="ng-binding">
-                                   {{this.bonus_indicacao_indireta}}
+                                   {{this.description}}
                                 </td>
                                 <td class="ng-binding">
-                                    {{this.bonus_matching}}
-                                </td>
-                                <!-- <td class="ng-binding">
-                                     {{this.bonus_plano_carreira}}
-                                </td> -->
-                                <td class="ng-binding">
-                                   {{this.bonus_booster}}
+                                    {{this.crdate}}
                                 </td>
                                 <td class="ng-binding">
-                                   {{this.bonus_montly}}
+                                    <a class="btn btn-primary" href="/course/detail/{{this.id}}"> Detail</a>
+                                    <a class="btn btn-success" href="/course/edit/{{this.id}}"> Edit</a>
+                                    <a onclick="return confirm('Are you sure to delete this course?');" class="btn btn-danger" href="/course/del/{{this.id}}"> Delete</a>
                                 </td>
-                                <td class="ng-binding">
-                                   {{this.bonus_super_pool}}
-                                </td>
-                                <td class="ng-binding">
-                                   {{this.crdate}}
-                                </td>
+                                
                             </tr>  
                             {{/each}}
                             </tbody>
