--- a/lib/views/partials/header.html
+++ b/lib/views/partials/header.html
@@ -133,10 +133,10 @@
                                 <i class="fa fa-gear" style="font-size: 40px; margin-top: 14px;"></i>
                                 <span class="visible-xs-inline-block m-l ng-binding" style="color: white;">suporte</span>
                             </a>
-                            <!-- Dropdown -->
+                            <!-- Dropdown <i class="fas fa-unlock"></i>-->
                             <ul class="dropdown-menu lg-dropdown">
-                               
-                                <li class="menu-icon"><a href="/logout"><span class="gcon gcon-log-out rs-dropdown-icon"></span>Log Out</a></li>
+                                 <li class="menu-icon"><a href="/change_password"><span class="fa fa-lock rs-dropdown-icon"></span>Change Password</a></li>
+                                <li class="menu-icon"><a href="/logout"><span class="fa fa-sign-out rs-dropdown-icon"></span>Log Out</a></li>
                             </ul>
                             <!-- End dropdown -->
                         </li>
